force-app/main/default/objects/System_Outage__c/System_Outage__c.object-meta.xml
<CustomObject>
    <description>Custom object to store System Outage information related to Cases.</description>
    <label>System Outage</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>System Outage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Outages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>