force-app/main/default/objects/System_Outage__c/fields/Calculated_Downtime_Calc__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Downtime_Calc__c</fullName>
    <formula>End_Time__c  -  Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Time Calc</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>