force-app/main/default/objects/System_Outage__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time (PST/PDT)</label>
    <type>DateTime</type>
</CustomField>