force-app/main/default/objects/System_Outage__c/fields/End_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>End_Time_GMT__c</fullName>
    <formula>MID ( TEXT ( End_Time__c ), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time (GMT)</label>
    <type>Text</type>
</CustomField>