force-app/main/default/objects/System_Outage__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time (PST/PDT)</label>
    <type>DateTime</type>
</CustomField>