force-app/main/default/objects/System_Outage__c/fields/Start_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_GMT__c</fullName>
    <formula>MID ( TEXT ( Start_Time__c  ), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time (GMT)</label>
    <type>Text</type>
</CustomField>