force-app/main/default/objects/System_Outage__c/fields/Subsystem_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Subsystem_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Master. This will be mapped to subsystem picklist on the page</description>
    <label>Subsystem</label>
    <referenceTo>System_Master__c</referenceTo>
    <relationshipLabel>System Outages (Subsystem)</relationshipLabel>
    <relationshipName>System_Outages1</relationshipName>
    <type>Lookup</type>
</CustomField>