force-app/main/default/objects/System_Outage__c/fields/SubSystems__c.field-meta.xml
<CustomField>
    <fullName>SubSystems__c</fullName>
    <label>SubSystems-old</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>System__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AA&amp;D</fullName>
            </value>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>AmberWatch</fullName>
            </value>
            <value>
                <fullName>Asset Tracker</fullName>
            </value>
            <value>
                <fullName>AT&amp;T – Frame Relay</fullName>
            </value>
            <value>
                <fullName>BGW (EU)</fullName>
            </value>
            <value>
                <fullName>BGW (US)</fullName>
            </value>
            <value>
                <fullName>BGW200</fullName>
            </value>
            <value>
                <fullName>CARDIONET</fullName>
            </value>
            <value>
                <fullName>CDS - Content Delivery Service</fullName>
            </value>
            <value>
                <fullName>CER - Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>CNR OVM - AEF Portal</fullName>
            </value>
            <value>
                <fullName>CS - Common Services</fullName>
            </value>
            <value>
                <fullName>DE - Driver Email</fullName>
            </value>
            <value>
                <fullName>DN – Driver Notification</fullName>
            </value>
            <value>
                <fullName>DW - Driver Workflow</fullName>
            </value>
            <value>
                <fullName>EGGW200</fullName>
            </value>
            <value>
                <fullName>EMGW200 - GPRS</fullName>
            </value>
            <value>
                <fullName>EOMNI200/EMGW200-GPRS</fullName>
            </value>
            <value>
                <fullName>EOMNI200 - GPRS</fullName>
            </value>
            <value>
                <fullName>Europe200</fullName>
            </value>
            <value>
                <fullName>Europe200/EGGW200-GTE</fullName>
            </value>
            <value>
                <fullName>Fleetvisor (EU)</fullName>
            </value>
            <value>
                <fullName>GGW200</fullName>
            </value>
            <value>
                <fullName>Ghos/Qhos/Guava</fullName>
            </value>
            <value>
                <fullName>GlobalTRACS/Europe</fullName>
            </value>
            <value>
                <fullName>GlobalTRACSWeb</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>GSS - Geo Spatial Services</fullName>
            </value>
            <value>
                <fullName>IES Mobile/ICC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>