force-app/main/default/objects/System_Outage__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System-old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Providers</fullName>
            </value>
            <value>
                <fullName>NMC</fullName>
            </value>
            <value>
                <fullName>NMC - Hosted</fullName>
            </value>
            <value>
                <fullName>QDC</fullName>
            </value>
            <value>
                <fullName>QSP (Mex)</fullName>
            </value>
            <value>
                <fullName>QSP (US)</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>