force-app/main/default/objects/System_Outage__c/fields/System_Lookup__c.field-meta.xml
<CustomField>
    <fullName>System_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System</label>
    <referenceTo>System_Master__c</referenceTo>
    <relationshipLabel>System Outages</relationshipLabel>
    <relationshipName>System_Outages</relationshipName>
    <type>Lookup</type>
</CustomField>