force-app/main/default/objects/System_Outage__c/fields/Test_Calc__c.field-meta.xml
<CustomField>
    <fullName>Test_Calc__c</fullName>
    <formula>IF ( Calculated_Downtime_Calc__c &gt; 0, Text(FLOOR((End_Time__c- Start_Time__c) * 24))  &amp;&quot;:&quot;&amp;Text(FLOOR(((End_Time__c- Start_Time__c) * 24 - FLOOR((End_Time__c -Start_Time__c) * 24))* 60))  &amp;&quot;:&quot;&amp;Text(FLOOR((((End_Time__c - Start_Time__c) * 24 - FLOOR((End_Time__c - Start_Time__c) * 24 ))* 60 - FLOOR(((End_Time__c - Start_Time__c) * 24 - FLOOR((End_Time__c -Start_Time__c) * 24 )) * 60 )) * 60 )),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Calc</label>
    <type>Text</type>
</CustomField>