force-app/main/default/objects/System_Outage__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Degraded Service</fullName>
            </value>
            <value>
                <fullName>Planned Downtime</fullName>
            </value>
            <value>
                <fullName>Unplanned Downtime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>