force-app/main/default/objects/System_Outage__c/validationRules/End_Time_Greater_Than_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_Greater_Than_Start_Time</fullName>
    <active>true</active>
    <description>The Outage End Time must be greater than the Start Time</description>
    <errorConditionFormula>Start_Time__c  &gt; End_Time__c</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time must be later than Start Time. Please re-enter the End Time of the System Outage.</errorMessage>
</ValidationRule>